--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -1,20 +1,24 @@
-<mat-card class="mat-elevation-z20 container-custom">
-  <mat-card-content>
-    <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formDate">
-      <mat-form-field fxFlex="31%">
+<div id="midas-manage-transaction">
+<mat-card class="mat-elevation-z20" >
+  <mat-card-header>
+    <div  fxFlex="100%" fxLayout="column"  fxLayout.gt-sm="row"
+          fxLayoutAlign="center stretch" fxLayoutAlign.gt-sm=" center center"
+          fxLayoutGap="2%"
+          [formGroup]="formDate">
+      <mat-form-field fxFlex.gt-sm="31" fxFlex="95%">
         <mat-label>Từ ngày</mat-label>
         <input matInput [matDatepicker]="transactionDateFromPicker" formControlName="fromDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateFromPicker></mat-datepicker>
       </mat-form-field>
 
-      <mat-form-field fxFlex="31%">
+      <mat-form-field fxFlex.gt-sm="31" fxFlex="95%">
         <mat-label>Đến ngày</mat-label>
         <input matInput [matDatepicker]="transactionDateToPicker" formControlName="toDate" />
         <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateToPicker></mat-datepicker>
       </mat-form-field>
-      <div fxFlex="31%">
+      <div fxFlex.gt-sm="31" fxFlex="95%" fxLayout="row" fxLayoutAlign=" center center">
         <button
           *ngIf="fromDateAndToDate"
           (click)="getTransaction()"
@@ -44,176 +48,184 @@
         </button>
       </div>
     </div>
-    <div class="container" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column"></div>
-  </mat-card-content>
-  <mat-card-content style="margin-top: 10px">
-    <mat-card>
-      <div fxLayout="row swap" fxLayoutAlign.lt-sm="center" fxLayoutGap="2%" fxLayout.lt-md="column">
-        <div fxLayout="row" fxFlex="18%" class="export-item">
+
+  </mat-card-header>
+
+  <mat-card-content fxLayout="column"  fxLayoutAlign="center stretch">
+<!--  Show các số liệu tổng  -->
+    <mat-card class="sum_area">
+
+      <mat-card-content fxLayout="column"  fxLayout.gt-sm="row"
+                        fxLayoutAlign="center stretch" fxLayoutAlign.gt-sm="space-evenly center"
+                        fxLayoutGap="2%" >
+        <div fxLayout="row" fxFlex="18%" class="sum-item">
           <img src="assets/images/icons/transaction_total.svg" />
           <div fxLayout="column">
-            <span class="money-total">{{ filterData?.length }}</span>
-            <span>Tổng giao dịch </span>
+            <span class="sum_value">{{ filterData?.length }}</span>
+            <span class="sum_lable">Tổng giao dịch </span>
           </div>
         </div>
-        <div fxLayout="row wrap" fxFlex="20%" class="container m-b-20">
+        <div fxLayout="row wrap" fxFlex="20%" class="sum-item">
           <img src="assets/images/icons/money.svg" />
-          <div style="display: flex" fxLayout="column">
-            <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{ totalTerminalAmount | money }}</span>
-            <span>&nbsp;Tổng tiền giao dịch</span>
+          <div  fxLayout="column">
+            <span class="sum_value">{{ totalTerminalAmount | money }}</span>
+            <span class="sum_lable">Tổng tiền giao dịch</span>
           </div>
         </div>
-        <div fxLayout="row wrap" fxFlex="20%" class="container m-b-20">
+        <div fxLayout="row wrap" fxFlex="20%" class="sum-item">
           <img src="assets/images/icons/transaction.svg" />
-          <div style="display: flex" fxLayout="column">
-            <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{ totalFeeAmount | money }}</span>
-            <span>&nbsp;Phí thu được ({{ (totalFeeAmount / totalTerminalAmount) * 100 | number: "1.0-2" }}%)</span>
+          <div fxLayout="column">
+            <span class="sum_value">{{ totalFeeAmount | money }}</span>
+            <span class="sum_lable">Phí thu được ({{ (totalFeeAmount / totalTerminalAmount) * 100 | number: "1.0-2" }}%)</span>
           </div>
         </div>
-        <!-- <div fxLayout="row wrap" *midasHasPermission="'POS_UPDATE'" fxFlex="20%" class="container m-b-20">
+        <!-- <div fxLayout="row wrap" *midasHasPermission="'POS_UPDATE'" fxFlex="20%" class="sum-item">
           <img src="assets/images/icons/capital.svg" />
           <div style="display: flex" fxLayout="column">
-            <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{ totalCogsAmount | money }}</span>
-            <span>&nbsp; SP vốn</span>
+            <span class="sum_value">{{ totalCogsAmount | money }}</span>
+            <span class="sum_label">&nbsp; SP vốn</span>
           </div>
         </div> -->
-        <div *midasHasPermission="'POS_UPDATE'" fxLayout="row wrap" fxFlex="20%" class="container m-b-20">
+        <div *midasHasPermission="'POS_UPDATE'" fxLayout="row wrap" fxFlex="20%" class="sum-item">
           <img src="assets/images/icons/pnlAmount.svg" />
-          <div style="display: flex" fxLayout="column">
-            <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{ totalPnlAmount | money }}</span>
-            <span> &nbsp;PNL</span>
+          <div fxLayout="column">
+            <span class="sum_value">{{ totalPnlAmount | money }}</span>
+            <span class="sum_lable">PNL</span>
           </div>
         </div>
-      </div>
+      </mat-card-content>
     </mat-card>
-  </mat-card-content>
-  <mat-accordion>
-    <mat-expansion-panel expanded="false" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-      <mat-expansion-panel-header>
-        <mat-panel-title> Xem theo </mat-panel-title>
-      </mat-expansion-panel-header>
-      <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
-        <mat-form-field fxFlex="18%" *midasHasPermission="'ALL_FUNCTIONS'">
-          <mat-label>Chi nhánh</mat-label>
-          <mat-select formControlName="officeId">
-            <mat-option *ngFor="let type of offices" [value]="type.officeId">
-              {{ type.name }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <mat-form-field fxFlex="18%">
-          <mat-label>Loại gia dịch</mat-label>
-          <mat-select formControlName="productId">
-            <mat-option *ngFor="let type of transactionType" [value]="type.value">
-              {{ type.label }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+<!--  Kết thúc  -->
+<!--  Các điều kiện tìm kiếm  -->
+    <mat-accordion class="search_area">
+      <mat-expansion-panel expanded="false" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title> Xem theo </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
+          <mat-form-field fxFlex="18%" *midasHasPermission="'ALL_FUNCTIONS'">
+            <mat-label>Chi nhánh</mat-label>
+            <mat-select formControlName="officeId">
+              <mat-option *ngFor="let type of offices" [value]="type.officeId">
+                {{ type.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Loại gia dịch</mat-label>
+            <mat-select formControlName="productId">
+              <mat-option *ngFor="let type of transactionType" [value]="type.value">
+                {{ type.label }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Trạng thái giao dịch</mat-label>
-          <mat-select formControlName="status">
-            <mat-option *ngFor="let type of statusOption" [value]="type.value">
-              {{ type.label }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Trạng thái giao dịch</mat-label>
+            <mat-select formControlName="status">
+              <mat-option *ngFor="let type of statusOption" [value]="type.value">
+                {{ type.label }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Đối tác</mat-label>
-          <mat-select formControlName="partnerCode">
-            <mat-option *ngFor="let type of partners" [value]="type.code">
-              {{ type.desc }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Đối tác</mat-label>
+            <mat-select formControlName="partnerCode">
+              <mat-option *ngFor="let type of partners" [value]="type.code">
+                {{ type.desc }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Đại lý</mat-label>
-          <input matInput formControlName="agencyName" />
-        </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Đại lý</mat-label>
+            <input matInput formControlName="agencyName" />
+          </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Khách hàng</mat-label>
-          <input matInput formControlName="panHolderName" />
-        </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Khách hàng</mat-label>
+            <input matInput formControlName="panHolderName" />
+          </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Mã máy</mat-label>
-          <input matInput formControlName="terminalId" />
-          <!-- <mat-select formControlName="terminalId">
-            <mat-option *ngFor="let terminal of terminals" [value]="terminal.terminalId">
-              {{ terminal.terminalName }}
-            </mat-option>
-          </mat-select> -->
-        </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Mã máy</mat-label>
+            <input matInput formControlName="terminalId" />
+            <!-- <mat-select formControlName="terminalId">
+              <mat-option *ngFor="let terminal of terminals" [value]="terminal.terminalId">
+                {{ terminal.terminalName }}
+              </mat-option>
+            </mat-select> -->
+          </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Trace No</mat-label>
-          <input matInput formControlName="traceNo" />
-        </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Trace No</mat-label>
+            <input matInput formControlName="traceNo" />
+          </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Batch No</mat-label>
-          <input matInput formControlName="batchNo" />
-        </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Batch No</mat-label>
+            <input matInput formControlName="batchNo" />
+          </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Mã lô</mat-label>
-          <input matInput formControlName="trnRefNo" />
-        </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Mã lô</mat-label>
+            <input matInput formControlName="trnRefNo" />
+          </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Tiền giao dịch</mat-label>
-          <input matInput formControlName="terminalAmount" />
-        </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Tiền giao dịch</mat-label>
+            <input matInput formControlName="terminalAmount" />
+          </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Nhân viên</mat-label>
-          <mat-select formControlName="userId">
-            <mat-option *ngFor="let type of staffs" [value]="type.userId">
-              {{ type.displayName }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+          <mat-form-field fxFlex="18%">
+            <mat-label>Nhân viên</mat-label>
+            <mat-select formControlName="userId">
+              <mat-option *ngFor="let type of staffs" [value]="type.userId">
+                {{ type.displayName }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <div fxFlex="18%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-          <mat-checkbox fxFlex="100%" labelPosition="before" formControlName="RetailsChoose" class="margin-v">
-            Giao dịch lẻ
-          </mat-checkbox>
-          <mat-checkbox fxFlex="100%" labelPosition="before" formControlName="wholesaleChoose" class="margin-v">
-            Giao dịch sỉ
-          </mat-checkbox>
-          <mat-checkbox fxFlex="100%" labelPosition="before" formControlName="holdTransaction" class="margin-v">
-            Giao dịch treo
-          </mat-checkbox>
+          <div fxFlex="18%" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+            <mat-checkbox fxFlex="100%" labelPosition="before" formControlName="RetailsChoose" class="margin-v">
+              Giao dịch lẻ
+            </mat-checkbox>
+            <mat-checkbox fxFlex="100%" labelPosition="before" formControlName="wholesaleChoose" class="margin-v">
+              Giao dịch sỉ
+            </mat-checkbox>
+            <mat-checkbox fxFlex="100%" labelPosition="before" formControlName="holdTransaction" class="margin-v">
+              Giao dịch treo
+            </mat-checkbox>
+          </div>
+
+          <div fxFlex="18%">
+            <!-- <button style="margin: 5px; height: 40px" (click)="exportTransaction()" color="primary" mat-raised-button>
+              Export
+            </button>-->
+            <button style="margin: 5px; height: 40px" (click)="exportData()" color="primary" mat-raised-button>
+              Export
+            </button>
+
+            <button
+              style="margin: 5px; height: 40px"
+              (click)="exportTransactionForPartner()"
+              color="primary"
+              mat-raised-button
+            >
+              Export Cho đối tác
+            </button>
+
+            <!-- <button style="margin: 5px; height: 40px" (click)="exportAsXLSX()" color="primary" mat-raised-button>
+              Tải danh sách giao dịch
+            </button> -->
+          </div>
         </div>
-
-        <div fxFlex="18%">
-          <!-- <button style="margin: 5px; height: 40px" (click)="exportTransaction()" color="primary" mat-raised-button>
-            Export
-          </button>-->
-          <button style="margin: 5px; height: 40px" (click)="exportData()" color="primary" mat-raised-button>
-            Export
-          </button>
-
-          <button
-            style="margin: 5px; height: 40px"
-            (click)="exportTransactionForPartner()"
-            color="primary"
-            mat-raised-button
-          >
-            Export Cho đối tác
-          </button>
-
-          <!-- <button style="margin: 5px; height: 40px" (click)="exportAsXLSX()" color="primary" mat-raised-button>
-            Tải danh sách giao dịch
-          </button> -->
-        </div>
-      </div>
-    </mat-expansion-panel>
-  </mat-accordion>
-  <mat-card-content>
+      </mat-expansion-panel>
+    </mat-accordion>
+<!--  Kết thúc  -->
+<!--  Bảng chi tiết giao dịch  -->
+    <div fxFlex="100%">
     <table
       id="transactionData"
       mat-table
@@ -260,11 +272,11 @@
       </ng-container>
 
       <ng-container matColumnDef="officeName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef mat-sort-header>
           Người tạo / <br />
           máy bán hàng
         </th>
-        <td mat-cell *matCellDef="let journalEntry" style="word-wrap: break-word; width: 200px">
+        <td fxHide fxShow.gt-md mat-cell *matCellDef="let journalEntry" style="word-wrap: break-word; width: 200px">
           <!-- {{ journalEntry.officeName }} <br /> -->
           <span class="blue_text">{{ journalEntry.createdByName }} </span><br />
           <span class="red_text">{{ displayTerminalName(journalEntry.terminalId) }}</span>
@@ -341,7 +353,7 @@
             [matMenuTriggerFor]="transactionMenu"
             (menuOpened)="menuOpened()"
             (menuClosed)="menuClosed()"
-            ><i class="fa fa-ellipsis-v" aria-hidden="true"></i
+          ><i class="fa fa-ellipsis-v" aria-hidden="true"></i
           ></span>
         </td>
       </ng-container>
@@ -350,9 +362,11 @@
           <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
             <div class="example-element-description" fxLayout="column">
               <div><span style="font-weight: bold"> Loại giao dịch :</span>&nbsp;{{ element.productId }}</div>
+              <div><span style="font-weight: bold">Người tạo :</span> {{ element.createdByName }}</div>
+              <div><span style="font-weight: bold">Máy bán hàng :</span> {{ element.terminalId }}</div>
               <div>
                 <span style="font-weight: bold"> Ngày giao dịch :</span>&nbsp; &nbsp;{{
-                  element.txnDate | date: "dd-MM-yyyy HH:ss"
+                element.txnDate | date: "dd-MM-yyyy HH:ss"
                 }}
               </div>
               <div><span style="font-weight: bold"> Số giao dịch :</span>&nbsp; &nbsp;{{ element.trnRefNo }}</div>
@@ -386,8 +400,20 @@
       ></tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
+  </div>
+
+<!--  Kết thúc  -->
+    <mat-paginator
+      paginator
+      [length]="filterData?.length"
+      [pageSize]="10"
+      [pageSizeOptions]="[10, 25, 50, 100]"
+      showFirstLastButtons
+    ></mat-paginator>
   </mat-card-content>
 
+
+<!-- Menu  -->
   <mat-menu #transactionMenu="matMenu" [overlapTrigger]="false" style="width: 50px">
     <ng-template
       matMenuContent
@@ -481,11 +507,8 @@
   <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
     <mat-progress-spinner color="warn" mode="indeterminate"> </mat-progress-spinner>
   </div>
-  <mat-paginator
-    paginator
-    [length]="filterData?.length"
-    [pageSize]="10"
-    [pageSizeOptions]="[10, 25, 50, 100]"
-    showFirstLastButtons
-  ></mat-paginator>
+
 </mat-card>
+
+
+</div>
