Cập nhật mobile UI cho bảng thông báo giao dịch thành công

--- a/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.html
+++ b/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<div mat-dialog-content id="transaction-successful-dialog">
   <h1 style="color: green">Chúc mừng! Bạn đã thực hiện giao dịch [{{ transactionInfo.trnRefNo }}] thành công</h1>
   <h2>Bạn sẽ</h2>
   <!-- <mat-dialog-actions align="center">
