--- a/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.scss
+++ b/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.scss
@@ -1,4 +1,7 @@
-
+#transaction-successful-dialog {
+  padding: 1rem 1rem;
+  max-height: 90%;
+}
 .container-custom {
   max-width: 105rem;
   width: 100%;
