update bottom menu for mobile UI

--- a/src/app/core/shell/toolbar/bottom-menu/bottom-menu.component.html
+++ b/src/app/core/shell/toolbar/bottom-menu/bottom-menu.component.html
@@ -2,11 +2,11 @@
   <mat-toolbar class="toolbarNav">
     <div class="bottom-item" [routerLink]="['/home']">
       <i class="fad fa-home"></i>
-      <span> Trang chủ</span>
+      <span> Trang chủ </span>
     </div>
     <div class="bottom-item" [routerLink]="['/clients/customer']">
       <i class="fad fa-address-card"></i>
-      <span> Khách hàng</span>
+      <span> Khách hàng </span>
     </div>
     <div class="bottom-item">
 
@@ -19,11 +19,11 @@
     </div>
     <div class="bottom-item" [routerLink]="['/transaction']">
       <i class="fad fa-th-list"></i>
-      <span> Giao dịch</span>
+      <span> Giao dịch </span>
     </div>
-    <div class="bottom-item">
-      <i class="fad fa-user"></i>
-      <span> Tôi</span>
+    <div class="bottom-item" [routerLink]="['/terminals/limit']">
+      <i class="fad fa-cash-register"></i>
+      <span> Máy POS </span>
     </div>
   </mat-toolbar>
 </div>
