--- a/src/app/terminals/terminals.component.html
+++ b/src/app/terminals/terminals.component.html
@@ -1,3 +1,4 @@
+<div id="terminal-page" >
 <mat-card class="container">
 
     <div fxLayout="row" fxLayoutAlign="start center">
@@ -106,3 +107,4 @@
 
    <mat-paginator  paginator [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
   </mat-card>
+</div>
