--- a/src/app/clients/client-customer/client-customer.component.html
+++ b/src/app/clients/client-customer/client-customer.component.html
@@ -1,7 +1,7 @@
-<!-- <div class=" mat-typography"> -->
-    <mat-card class="container-fluid m-l-30 m-r-30 m-t-10">
+ <div id="client-list" class="mat-typography">
+    <mat-card >
 
-        <div fxLayout="row wrap" fxLayout.lt-md="column">
+        <mat-card-header fxLayout="row wrap" fxLayout.lt-md="column" >
           <div class="search-box" fxFlex.gt-md="48%"  >
             <mat-form-field>
               <input matInput [placeholder]="'Client_Component.inputPlaceholderClosedCIF'| translate"
@@ -22,28 +22,28 @@
               <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{ this.createButtonName}}
             </button>
           </div>
-        </div>
-      
-        <div >
-          <table class="mat-elevation-z8" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>-->
+        </mat-card-header>
+
+        <mat-card-content class="m-t-10"  >
+          <table id="client-list-table" class="mat-elevation-z8" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>-->
             <!-- Name Column -->
             <ng-container matColumnDef="name">
               <th mat-header-cell  *matHeaderCellDef mat-sort-header='displayName'> {{ 'Client_Component.tblColName'| translate}}</th>
               <td mat-cell *matCellDef="let row"> {{row.displayName}} </td>
             </ng-container>
-      
+
             <!-- Account no Column -->
             <ng-container matColumnDef="clientno">
               <th mat-header-cell fxHide fxShow.gt-md  *matHeaderCellDef mat-sort-header='accountNo'> {{ 'Client_Component.tblColAccount'| translate}}  </th>
               <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.accountNo}} </td>
             </ng-container>
-      
+
             <!-- External ID Column -->
             <ng-container matColumnDef="externalid">
               <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header='externalId'> {{ 'Client_Component.tblColExternalID'| translate}}  </th>
               <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.externalId}} </td>
             </ng-container>
-      
+
             <!-- Status Column -->
             <ng-container matColumnDef="status">
               <th mat-header-cell  *matHeaderCellDef> {{ 'Client_Component.tblColStatus'| translate}}  </th>
@@ -53,69 +53,73 @@
                 </div>
               </td>
             </ng-container>
-      
+
             <!-- Mobile Number Column-->
             <ng-container matColumnDef="mobileNo">
               <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header> {{ 'Client_Component.tblColMobileNumber'| translate}} </th>
               <td mat-cell fxHide fxShow.gt-md *matCellDef="let client"> {{ client.mobileNo }} </td>
             </ng-container>
-      
+
             <!--Gender column-->
             <ng-container matColumnDef="gender">
               <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef> {{ 'Client_Component.tblColGender'| translate}}  </th>
               <td mat-cell fxHide fxShow.gt-md  *matCellDef="let client"> {{ client.gender.name }} </td>
             </ng-container>
-      
+
             <!-- Color Column -->
             <ng-container matColumnDef="office">
               <th mat-header-cell fxHide fxShow.gt-md  *matHeaderCellDef mat-sort-header='officeName'> {{ 'Client_Component.tblColOfficeName'| translate}}  </th>
               <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.officeName}} </td>
             </ng-container>
-      
+
             <!-- ID Column -->
-            
+
             <ng-container matColumnDef="staff">
               <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header='staffName'> {{ 'Client_Component.tblColStaffName'| translate}}  </th>
               <td mat-cell fxHide fxShow.gt-md  *matCellDef="let row"> {{row.staffName}} </td>
             </ng-container>
-      
+
             <ng-container matColumnDef="expandedDetail">
               <td mat-cell fxShow fxHide.gt-md *matCellDef="let element" [attr.colspan]="displayedColumns.length">
                 <div class="example-element-detail"
                      [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                  <div class="example-element-description" fxLayout="column">
-                    <div>
+                  <ul class="example-element-description" fxLayout="column">
+                    <li>
                       <span style="font-weight: bold;">{{ 'Client_Component.tblColAccount'| translate}} :</span> &nbsp;{{element.accountNo}}
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                       <span style="font-weight: bold;"> {{ 'Client_Component.tblColExternalID'| translate}} :</span> &nbsp;{{element.externalId}}
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                       <span style="font-weight: bold;"> {{ 'Client_Component.tblColMobileNumber'| translate}} :</span> &nbsp;{{element.mobileNo}}
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                       <span style="font-weight: bold;"> {{ 'Client_Component.tblColGender'| translate}} :</span> &nbsp;{{element.gender.name}}
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                       <span style="font-weight: bold;"> {{ 'Client_Component.tblColOfficeName'| translate}} :</span> &nbsp;{{element.officeName}}
-                    </div>
-                    <div>
+                    </li>
+                    <li>
                       <span style="font-weight: bold;"> {{ 'Client_Component.tblColStaffName'| translate}} :</span> &nbsp;{{element.staffName}}
-                    </div>
-                  </div>
+                    </li>
+                  </ul>
                 </div>
               </td>
             </ng-container>
-      
+
             <ng-container matColumnDef="link">
               <th mat-header-cell  *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let row"  >
                 <button mat-mini-fab color="primary" [routerLink]="['../'+row.id,this.tabWillView ]" [queryParams]="this.tabQueryParams"
-      
+
                       [matTooltip]="'ShareLabel.lblViewDetail'| translate" matTooltipPosition="above">
                   <i class="fa fa-address-card" aria-hidden="true"></i></button></td>
             </ng-container>
-      
+<!-- Phần render table gồm:
+        - Header
+        - Dòng thông tin bình thường
+        - Dòng thông tin mở rông cho mobile UI
+ -->
             <tr mat-header-row  *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let element; columns: displayedColumns;"
                 class="example-element-row"
@@ -124,11 +128,12 @@
             </tr>
             <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
           </table>
-      
+
           <mat-paginator [length]="dataSource?.records$ | async" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"
                          showFirstLastButtons></mat-paginator>
-        </div>
-      
+<!--  Kết thúc Table   -->
+        </mat-card-content>
+
       </mat-card>
-<!-- </div> -->
+ </div>
 
