--- a/src/app/core/shell/toolbar/toolbar.component.scss
+++ b/src/app/core/shell/toolbar/toolbar.component.scss
@@ -1,74 +1,84 @@
 #midas-toolbar {
-  //box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+
   // background: linear-gradient(-90deg, rgba(198, 40, 40, 1), rgba(198, 40, 40, 0.5));
-  background: transparent;
-    
+  background: #ececec;;
+  position: fixed;
+  //top: 4px;
+  z-index: 9000;
+  width: 100%;
+  overflow: auto;
 
-  .tab-link {
-    min-width: auto;
-    padding: 0 1rem;
-  }
+  .mat-toolbar {
+    background: transparent;
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
-  .search-bar {
-    .search {
-      max-width: 400px;
-      width: 100%;
-      font-size: 1rem;
-    }
-  }
-
-  .language {
-    min-width: 80px;
-    width: 80px;
-    font-size: 0.875rem;
-    margin-top: 0.375rem;
-  }
-
-  .img-button {
-    img {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-    }
-  }
-
-  .ml-1 {
-    margin-left: 1rem;
-  }
-
-  .mr-1 {
-    margin-right: 1rem;
-  }
-
-  .fabmenu{
-    position: fixed;
-    bottom: 1%;
-    right: 3%;
-  }
-
-  .app-brand {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    max-width: 15rem;
-    z-index: 9999;
-    &:hover {
-      cursor: pointer;
+    .tab-link {
+      min-width: auto;
+      padding: 0 1rem;
     }
 
-    .app-logo {
-      width: auto;
-      height: 42px;
-      margin-right: 8px;
+    .search-bar {
+      .search {
+        max-width: 400px;
+        width: 100%;
+        font-size: 1rem;
+      }
     }
 
-    .app-logo-text {
-      width: auto;
-      height: auto;
-      font-size: 1.5rem;
-      font-weight: normal;
-      color: black;
+    .language {
+      min-width: 80px;
+      width: 80px;
+      font-size: 0.875rem;
+      margin-top: 0.375rem;
+    }
+
+    .img-button {
+      img {
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+      }
+    }
+
+    .ml-1 {
+      margin-left: 1rem;
+    }
+
+    .mr-1 {
+      margin-right: 1rem;
+    }
+
+    .fabmenu {
+      position: fixed;
+      bottom: 1%;
+      right: 3%;
+    }
+
+    .app-brand {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      max-width: 15rem;
+      z-index: 9999;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      .app-logo {
+        width: auto;
+        height: 42px;
+        margin-right: 8px;
+      }
+
+      .app-logo-text {
+        width: auto;
+        height: auto;
+        font-size: 1.5rem;
+        font-weight: normal;
+        color: black;
+      }
     }
   }
 }
