--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,23 +1,28 @@
-.container {
-  max-width: 37rem;
+#home-page {
+  width: 100%;
+  padding: 0.5rem;
 
-  .title {
-    font-size: 1.25rem;
-    font-weight: 500;
-    margin-left: -15px;
+  .container {
+    max-width: 37rem;
+
+    .title {
+      font-size: 1.25rem;
+      font-weight: 500;
+      margin-left: -15px;
+    }
   }
-}
 
-.mat-list-base {
-  padding-top: 0px;
-}
+  .mat-list-base {
+    padding-top: 0px;
+  }
 
-a{
-  text-decoration: none;
-  color: black
-}
+  a {
+    text-decoration: none;
+    color: black;
+  }
 
-.bigNumber{
-  font-size: larger;
+  .bigNumber {
+    font-size: larger;
+  }
 }
 
