--- a/src/app/clients/clients-view/clients-view.component.html
+++ b/src/app/clients/clients-view/clients-view.component.html
@@ -3,8 +3,8 @@
     <h3> Thông tin khách hàng </h3>
   </mat-card-header> -->
 
-  <mat-card-content fxLayout="row" fxLayout.lt-sm="column">
-    <div fxFlex.gt-sm="20" class="leftside ">
+  <mat-card-content fxLayout="row" fxLayout.lt-md="column">
+    <div fxFlex.gt-md="20" class="leftside ">
       <mat-card-title-group class="header-title-group">
         <h3> Thông tin khách hàng </h3>
         <div class="profile-image-container mat-elevation-z8 p-10 m-b-10">
@@ -67,7 +67,7 @@
             </mat-card-subtitle>
           </div>
 
-          <div fxLayout="row" fxLayout.lt-lg="column" fxLayoutAlign="center center" >
+          <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="center center" >
             <div *ngIf="!this.isInterchangeClient" class="p-5">
               <button mat-raised-button (click)="doAction('View Signature')">
                 <i class="fas fa-file-signature"></i> {{ "Client_Component.ViewClient.lblViewSignature" | translate }}
@@ -263,7 +263,7 @@
 
 
     </div>
-    <div fxFlex.gt-sm="80" class="rightside">
+    <div fxFlex.gt-md="80" class="rightside">
       <nav mat-tab-nav-bar class="navigation-tabs m-b-10" *ngIf="!this.isInterchangeClient">
         <a mat-tab-link [routerLink]="['./identities']" [queryParams]="{ typeViewClient: this.typeViewClient }"
           routerLinkActive #identities="routerLinkActive" [active]="identities.isActive"
