--- a/src/app/loans/loans-account-stepper/loans-account-details-step/loans-account-details-step.component.html
+++ b/src/app/loans/loans-account-stepper/loans-account-details-step/loans-account-details-step.component.html
@@ -54,7 +54,7 @@
 
     <mat-form-field fxFlex="48%">
       <mat-label>Disbursement on</mat-label>
-      <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="disbursementPicker" required
+      <input matInput [min]="minDate" [matDatepicker]="disbursementPicker" required
         formControlName="expectedDisbursementDate">
       <mat-datepicker-toggle matSuffix [for]="disbursementPicker"></mat-datepicker-toggle>
       <mat-datepicker #disbursementPicker></mat-datepicker>
