--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -304,12 +304,12 @@
 
       <ng-container matColumnDef="terminalAmount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Số tiền giao dịch</th>
-        <td mat-cell style="padding: 6px" *matCellDef="let transaction">
+        <td mat-cell style="padding: 6px; text-align: right;" *matCellDef="let transaction" >
           {{ transaction.terminalAmount | money }}
 
           <span *midasHasPermission="'BILLER_HO'">
-            <button title="Tải hóa đơn" mat-mini-fab (click)="downloadVoucher(transaction.refid)" color="basic">
-              <img src="assets/images/icons/bill.svg" />
+            <button title="Tải hóa đơn" mat-icon-button (click)="downloadVoucher(transaction.refid)" color="accent" >
+              <i class="fad fa-file-invoice-dollar" style="font-size: 1.25rem;"></i>
             </button>
           </span>
           <br />
@@ -325,26 +325,26 @@
 
       <ng-container matColumnDef="feeAmount">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Phí thu được</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry" style="padding: 6px; text-align: right;">
           <label>{{ journalEntry.feeAmount | money }}</label>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="terminalAmount_feeAmount">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Tỉ lệ phí</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          {{ journalEntry.terminalAmount_feeAmount | number }}
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry" style="padding: 6px; text-align: right;">
+          {{ journalEntry.terminalAmount_feeAmount | number }}%
         </td>
       </ng-container>
 
       <ng-container matColumnDef="pnlAmount">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>PNL</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction" style="padding: 6px; text-align: right;">
           <span *midasHasPermission="'POS_UPDATE'">{{ transaction.pnlAmount | money }}</span>
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="actions" style="width: 25px">
+      <ng-container matColumnDef="actions" style="width: 25px; text-align: right">
         <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
         <td mat-cell *matCellDef="let transaction">
           <span
@@ -382,7 +382,7 @@
               <li>
                  <span style="font-weight: bold"> Phí thu được :</span>&nbsp; &nbsp;{{ element.feeAmount | money }}
               </li>
-              <li><span style="font-weight: bold"> SP vốn :</span>&nbsp; &nbsp;{{ element.cogsAmount | money }}</li>
+              <li><span style="font-weight: bold"> CP vốn :</span>&nbsp; &nbsp;{{ element.cogsAmount | money }}</li>
               <li *midasHasPermission="'POS_UPDATE'">
                 <span style="font-weight: bold"> PNL :</span>&nbsp; &nbsp;{{ element.pnlAmount | money }}
               </li>
