fix some error on Loan create and manage transaction components
 - change validatio rule in loan create component
 - change css on manage transaction component

--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -388,7 +388,7 @@
                     <span style="font-weight: bold"> Phí thu được :</span>&nbsp; &nbsp;{{ element.feeAmount | money }}
                   </div>
                   <div>
-                    <span style="font-weight: bold"> SP vốn :</span>&nbsp; &nbsp;{{ element.cogsAmount | money }}
+                    <span style="font-weight: bold"> CP vốn :</span>&nbsp; &nbsp;{{ element.cogsAmount | money }}
                   </div>
                   <div *midasHasPermission="'POS_UPDATE'">
                     <span style="font-weight: bold"> PNL :</span>&nbsp; &nbsp;{{ element.pnlAmount | money }}
