--- a/src/app/core/shell/sidenav/sidenav.component.html
+++ b/src/app/core/shell/sidenav/sidenav.component.html
@@ -129,6 +129,9 @@
         <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals" disabled>
           {{ "Quản lý máy bán hàng" | translate }}
         </button>
+        <button mat-menu-item *midasHasPermission="'POS_READ'" routerLink="/terminals/request">
+          {{ "Danh sách request transfer" | translate }}
+        </button>
         <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party" disabled>
           {{ "Toolbar_Component.lblThirdParty" | translate }}
         </button>
