--- a/src/app/core/shell/toolbar/menu/menu.component.html
+++ b/src/app/core/shell/toolbar/menu/menu.component.html
@@ -157,6 +157,9 @@
   <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals">
     {{ "Quản lý máy bán hàng" | translate }}
   </button>
+  <button mat-menu-item *midasHasPermission="'POS_READ'" routerLink="/terminals/request">
+    {{ "Danh sách request transfer" | translate }}
+  </button>
   <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party">
     {{ "Toolbar_Component.lblThirdParty" | translate }}
   </button>
