--- a/src/app/core/shell/sidenav/sidenav.component.html
+++ b/src/app/core/shell/sidenav/sidenav.component.html
@@ -129,7 +129,10 @@
         <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals">
           {{ "Quản lý máy bán hàng" | translate }}
         </button>
-        <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party">
+        <button mat-menu-item *midasHasPermission="'POS_READ'" routerLink="/terminals/request">
+          {{ "Danh sách request transfer" | translate }}
+        </button>
+        <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party" >
           {{ "Toolbar_Component.lblThirdParty" | translate }}
         </button>
         <!-- <button mat-menu-item routerLink="/groups/spending-limit">Hạn mức chi tiêu</button> -->
