show office name ojn limit terminal page

--- a/src/app/terminals/view-limit-terminal/view-limit-terminal.component.html
+++ b/src/app/terminals/view-limit-terminal/view-limit-terminal.component.html
@@ -70,9 +70,10 @@
            [dataSource]="terminalList" >
 
       <ng-container matColumnDef="officeName">
-        <th fxHide mat-header-cell *matHeaderCellDef mat-sort-header> Chi nhánh</th>
-        <td fxHide mat-cell
-            *matCellDef="let terminal"> {{ terminal.officeName}} </td>
+        <th  mat-header-cell *matHeaderCellDef mat-sort-header> Chi nhánh</th>
+        <td  mat-cell
+            *matCellDef="let terminal"> {{ terminal.officeName}}
+          </td>
       </ng-container>
 
       <ng-container matColumnDef="terminalId">
