--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -226,7 +226,7 @@
   <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/terminals">
     {{ "Quản lý máy bán hàng" | translate }}
   </button>
-  <button mat-menu-item routerLink="/terminals/request">{{ "Danh sách request transfer" | translate }}</button>
+  <!-- <button mat-menu-item routerLink="/terminals/request">{{ "Danh sách request transfer" | translate }}</button> -->
   <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party">
     {{ "Toolbar_Component.lblThirdParty" | translate }}
   </button>
