--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -297,7 +297,7 @@
 
           <span *midasHasPermission="'BILLER_HO'">
             <button title="Tải hóa đơn" mat-icon-button (click)="downloadVoucher(transaction.refid)" color="accent" >
-              <i class="fad fa-file-invoice-dollar" style="font-size: 1.25rem;"></i>
+              <i class="fa fa-file-invoice-dollar" style="font-size: 1.25rem;"></i>
             </button>
           </span>
           <br />
