fix export func on manage transaction

--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -221,6 +221,9 @@
               <button style="margin: 5px; height: 40px" (click)="exportTransaction()" color="primary" mat-raised-button>
               Export
             </button>
+            <!-- <button style="margin: 5px; height: 40px" (click)="exportData()" color="primary" mat-raised-button>
+              Export
+            </button> -->
 
               <button
                 style="margin: 5px; height: 40px"
