fix export func on manage transaction

--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -208,12 +208,12 @@
           </div>
 
           <div fxFlex="18%">
-            <!-- <button style="margin: 5px; height: 40px" (click)="exportTransaction()" color="primary" mat-raised-button>
-              Export
-            </button>-->
-            <button style="margin: 5px; height: 40px" (click)="exportData()" color="primary" mat-raised-button>
+            <button style="margin: 5px; height: 40px" (click)="exportTransaction()" color="primary" mat-raised-button>
               Export
             </button>
+            <!-- <button style="margin: 5px; height: 40px" (click)="exportData()" color="primary" mat-raised-button>
+              Export
+            </button> -->
 
             <button
               style="margin: 5px; height: 40px"
