add permission ALL_FUNCTIONS on request transfer func

--- a/src/app/core/shell/sidenav/sidenav.component.html
+++ b/src/app/core/shell/sidenav/sidenav.component.html
@@ -129,7 +129,7 @@
         <button mat-menu-item *midasHasPermission="'POS_UPDATE'" routerLink="/terminals" disabled>
           {{ "Quản lý máy bán hàng" | translate }}
         </button>
-        <button mat-menu-item *midasHasPermission="'POS_READ'" routerLink="/terminals/request">
+        <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS'" routerLink="/terminals/request">
           {{ "Danh sách request transfer" | translate }}
         </button>
         <button mat-menu-item *midasHasPermission="'POS_CREATE'" routerLink="/third-party" disabled>
