add option placeholder for choose terminal

--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -284,6 +284,7 @@
                 [ngModelOptions]="{ standalone: true }"
                 matNativeControl
               >
+                <option value="" disabled selected>Chọn máy bán hàng</option>
                 <option *ngFor="let terminal of transactionInfo.listTerminal" [value]="terminal.terminalId">
                   {{ terminal.terminalName }} - Còn lại: {{ terminal.limitRemain | money }}
                 </option>
