fix set back value on wring bincode, typo

--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.html
@@ -333,15 +333,15 @@
       style="width: 50px"
     >
       <button (click)="showRollTermScheduleDialog(refid)" mat-menu-item>
-        <img src="assets/images/icons/add.svg" />&nbsp;Lịch Tạm ứung
+        <img src="assets/images/icons/add.svg" />&nbsp;Lịch tạm ứng
       </button>
       <button mat-menu-item (click)="executeLoanManualDialog(refid)">
-        <img src="assets/images/icons/order.svg" />&nbsp;Xử lý Tạm ứng
+        <img src="assets/images/icons/order.svg" />&nbsp;Xử lý tạm ứng
       </button>
 
       <hr />
       <button mat-menu-item (click)="undoRollTermTransaction(refid, principal - paidAmount)">
-        <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;Hủy Tạm ứng
+        <i class="fa fa-eye" aria-hidden="true"></i>&nbsp;Hủy tạm ứng
       </button>
     </ng-template>
   </mat-menu>
