add contract thecuatui
add contract thecuatui

--- a/src/app/clients/clients-view/clients-view.component.html
+++ b/src/app/clients/clients-view/clients-view.component.html
@@ -100,7 +100,7 @@
           </span> 
           <span *midasHasPermission="'UPDATE_CLIENT'" class="m-b-10" fxLayoutAlign="center stretch">
             <button mat-raised-button (click)="printComponent()" *ngIf="!this.isInterchangeClient">
-              <i class="fa fa-edit"></i>sprint
+              <i class="fa fa-edit"></i>In Hợp đồng dịch vụ tư vấn
             </button>
           </span>
 
