open create fix deposit, fix format amount, dateformat create

--- a/src/app/deposits/fixed-deposits/fixed-deposit-account-stepper/fixed-deposit-account-terms-step/fixed-deposit-account-terms-step.component.html
+++ b/src/app/deposits/fixed-deposits/fixed-deposit-account-stepper/fixed-deposit-account-terms-step/fixed-deposit-account-terms-step.component.html
@@ -4,7 +4,7 @@
 
     <mat-form-field fxFlex="48%">
       <mat-label>Deposit Amount</mat-label>
-      <input type="number" matInput formControlName="depositAmount" required>
+      <input type="text" currencyMask matInput formControlName="depositAmount" required>
       <mat-error>
         Fixed Deposit Amount is <strong>required</strong>
       </mat-error>
